--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -366,9 +366,24 @@
         </div>
           <div class="tab-content p-3" style="text-align: left;" id="pills-tabContent">
             <div class="tab-pane fade show active rounded-4 m-2" style="border-color: #EF539E;" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis accusantium voluptates, facere animi, eveniet consectetur hic veniam, dolores perferendis iusto doloremque? Eos atque veniam necessitatibus vel sapiente laboriosam quod rem.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque fugit vero ducimus saepe unde officiis impedit, optio quisquam ullam doloribus repellat provident sunt incidunt repudiandae dignissimos mollitia placeat perspiciatis?
-                </p>
+                <h5 class="visually-hidden">Ιατρικό Ιστορικό</h5>
+                {% if medical_history %}
+                    <p>
+                    {{
+                        medical_history.comments
+                    }}
+                    </p>
+                {% else %}
+                    <div class="text-end pb-3">
+                        <button class="btn login-btn px-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-plus-square" viewBox="0 1 16 16">
+                                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                            </svg>
+                            Νέο Ιστορικό
+                        </button>
+                    </div>
+                {% endif %}
             </div>
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, quasi enim mollitia doloribus praesentium dolores aut nostrum atque. Eveniet praesentium mollitia, quasi quia maxime expedita impedit odit sed modi? Quisquam.
