--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -368,7 +368,13 @@
             <div class="tab-pane fade show active rounded-4 m-2" style="border-color: #EF539E;" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                 <h5 class="visually-hidden">Ιατρικό Ιστορικό</h5>
                 {% if medical_history %}
-                    <p>
+
+
+                    {% for key, value in medical_history_dict.items() %}
+                        <p>
+                            <span>{{ key }}:</span> {{ value }} <br>
+                        <p>
+                    {% endfor %}
                     {{
                         medical_history.comments
                     }}
